# phishing-buddy

./: .gitignore  README.md  pyproject.toml
demo/: report.json
src/phishing_buddy/: __init__.py  analyze.py  cli.py  eml_parser.py  extract.py  models.py  report.py
src/phishing_buddy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_auth_results.py  test_domains.py  test_extract_urls.py  test_link_mismatch.py  test_risk_scoring.py
tests/fixtures/: sample_benign.eml  sample_phish.eml
