[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-buddy"
version = "0.1.0"
description = "CLI tool for phishing email triage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tldextract>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
phishing-buddy = "phishing_buddy.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"


